--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nedb-promise": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "nedb-promise": "^2.0.1",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19"
   }
 }
